m3d.h

    typedef float M3D_FLOAT;
    typedef double M3D_FLOAT;
    typedef uint32_t M3D_INDEX;
    typedef uint16_t M3D_INDEX;
    /* texture */
    typedef struct
    {
        char *name; /* texture name */
        uint8_t *d; /* pixels data */
        uint16_t w; /* width */
        uint16_t h; /* height */
        uint8_t f;  /* format, 1 = grayscale, 2 = grayscale+alpha, 3 = rgb, 4 = rgba */
    } m3dtx_t;
    typedef struct
    {
        M3D_INDEX vertexid;
        M3D_FLOAT weight;
    } m3dw_t;
    /* bone entry */
    typedef struct
    {
        M3D_INDEX parent;    /* parent bone index */
        char *name;          /* name for this bone */
        M3D_INDEX pos;       /* vertex index position */
        M3D_INDEX ori;       /* vertex index orientation (quaternion) */
        M3D_INDEX numweight; /* number of controlled vertices */
        m3dw_t *weight;      /* weights for those vertices */
        M3D_FLOAT mat4[16];  /* transformation matrix */
    } m3db_t;
    /* skin: bone per vertex entry */
    typedef struct
    {
        M3D_INDEX boneid[M3D_NUMBONE];
        M3D_FLOAT weight[M3D_NUMBONE];
    } m3ds_t;
    /* vertex entry */
    typedef struct
    {
        M3D_FLOAT x; /* 3D coordinates and weight */
        M3D_FLOAT y;
        M3D_FLOAT z;
        M3D_FLOAT w;
        uint32_t color;   /* default vertex color */
        M3D_INDEX skinid; /* skin index */
#ifdef M3D_VERTEXTYPE
        uint8_t type;
#endif
    } m3dv_t;