src/bindings.rs

#[test]
fn bindgen_test_layout_m3dtx_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dtx_t>(),
        24usize,
        concat!("Size of: ", stringify!(m3dtx_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dtx_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3dtx_t))
    );
    fn test_field_name() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dtx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dtx_t),
                "::",
                stringify!(name)
            )
        );
    }
    test_field_name();
    fn test_field_d() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dtx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).d) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dtx_t),
                "::",
                stringify!(d)
            )
        );
    }
    test_field_d();
    fn test_field_w() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dtx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).w) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dtx_t),
                "::",
                stringify!(w)
            )
        );
    }
    test_field_w();
    fn test_field_h() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dtx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).h) as usize - ptr as usize
            },
            18usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dtx_t),
                "::",
                stringify!(h)
            )
        );
    }
    test_field_h();
    fn test_field_f() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dtx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).f) as usize - ptr as usize
            },
            20usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dtx_t),
                "::",
                stringify!(f)
            )
        );
    }
    test_field_f();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dw_t {
    pub vertexid: M3D_INDEX,
    pub weight: M3D_FLOAT,
}
#[test]
fn bindgen_test_layout_m3dw_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dw_t>(),
        8usize,
        concat!("Size of: ", stringify!(m3dw_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dw_t>(),
        4usize,
        concat!("Alignment of ", stringify!(m3dw_t))
    );
    fn test_field_vertexid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dw_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).vertexid) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dw_t),
                "::",
                stringify!(vertexid)
            )
        );
    }
    test_field_vertexid();
    fn test_field_weight() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dw_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).weight) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dw_t),
                "::",
                stringify!(weight)
            )
        );
    }
    test_field_weight();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3db_t {
    pub parent: M3D_INDEX,
    pub name: *mut ::std::os::raw::c_char,
    pub pos: M3D_INDEX,
    pub ori: M3D_INDEX,
    pub numweight: M3D_INDEX,
    pub weight: *mut m3dw_t,
    pub mat4: [M3D_FLOAT; 16usize],
}
#[test]
fn bindgen_test_layout_m3db_t() {
    assert_eq!(
        ::std::mem::size_of::<m3db_t>(),
        104usize,
        concat!("Size of: ", stringify!(m3db_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3db_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3db_t))
    );
    fn test_field_parent() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3db_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).parent) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3db_t),
                "::",
                stringify!(parent)
            )
        );
    }
    test_field_parent();
    fn test_field_name() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3db_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3db_t),
                "::",
                stringify!(name)
            )
        );
    }
    test_field_name();
    fn test_field_pos() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3db_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).pos) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3db_t),
                "::",
                stringify!(pos)
            )
        );
    }
    test_field_pos();
    fn test_field_ori() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3db_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).ori) as usize - ptr as usize
            },
            20usize,
            concat!(
                "Offset of field: ",
                stringify!(m3db_t),
                "::",
                stringify!(ori)
            )
        );
    }
    test_field_ori();
    fn test_field_numweight() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3db_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).numweight) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(m3db_t),
                "::",
                stringify!(numweight)
            )
        );
    }
    test_field_numweight();
    fn test_field_weight() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3db_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).weight) as usize - ptr as usize
            },
            32usize,
            concat!(
                "Offset of field: ",
                stringify!(m3db_t),
                "::",
                stringify!(weight)
            )
        );
    }
    test_field_weight();
    fn test_field_mat4() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3db_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).mat4) as usize - ptr as usize
            },
            40usize,
            concat!(
                "Offset of field: ",
                stringify!(m3db_t),
                "::",
                stringify!(mat4)
            )
        );
    }
    test_field_mat4();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3ds_t {
    pub boneid: [M3D_INDEX; 4usize],
    pub weight: [M3D_FLOAT; 4usize],
}
#[test]
fn bindgen_test_layout_m3ds_t() {
    assert_eq!(
        ::std::mem::size_of::<m3ds_t>(),
        32usize,
        concat!("Size of: ", stringify!(m3ds_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3ds_t>(),
        4usize,
        concat!("Alignment of ", stringify!(m3ds_t))
    );
    fn test_field_boneid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3ds_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).boneid) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3ds_t),
                "::",
                stringify!(boneid)
            )
        );
    }
    test_field_boneid();
    fn test_field_weight() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3ds_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).weight) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3ds_t),
                "::",
                stringify!(weight)
            )
        );
    }
    test_field_weight();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dv_t {
    pub x: M3D_FLOAT,
    pub y: M3D_FLOAT,
    pub z: M3D_FLOAT,
    pub w: M3D_FLOAT,
    pub color: u32,
    pub skinid: M3D_INDEX,
}
